objects/Contact.object
<CustomObject>
    <fields>
        <fullName>PRT_JLR_Social_Media_Archive__c</fullName>
        <label>JLR Social Media Archive</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SO_Classic_News_Updates_Date__c</fullName>
        <label>Classic News &amp; Updates Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_Classic_News_Updates_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Classic News &amp; Updates User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRT_Social_Media_Last_Checked__c</fullName>
        <inlineHelpText>Date when the social media followers where last checked as accurate.</inlineHelpText>
        <label>Social Media Last Checked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Operational_Channel_Preference__c</fullName>
        <label>Operational Channel Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>SO_Contact</fullName>
        <active>true</active>
        <description>Capture details regarding an employee within a company</description>
        <label>Corporate Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>JLR_Internal</fullName>
        <active>true</active>
        <description>Contact Record Type for Internal JLR Contacts (non-Salesforce users)</description>
        <label>JLR Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_JLR_Contact</fullName>
        <active>true</active>
        <description>Capture details of a JLR Employee</description>
        <label>JLR Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Retailer_Contact</fullName>
        <active>true</active>
        <description>Capture details of a contact within a retailer</description>
        <label>Retailer Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>PR_Contact_Management</fullName>
        <active>true</active>
        <label>PR Contact Management</label>
    </recordTypes>
    <validationRules>
        <fullName>SO_Salutation_Other</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISPICKVAL(Salutation , &apos;Other&apos;),
 ISBLANK( Salutation_Other__c )
)</errorConditionFormula>
        <errorDisplayField>Salutation_Other__c</errorDisplayField>
        <errorMessage>You must provide provide the salutation when selecting other.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Validate_phone_or_email</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName = &apos;SO_Contact&apos; || RecordType.DeveloperName = &apos;SO_JLR_Contact&apos; || RecordType.DeveloperName = &apos;SO_Retailer_Contact&apos; || RecordType.DeveloperName = &apos;JLR_Internal&apos;) &amp;&amp; ISBLANK(Phone) &amp;&amp; ISBLANK(Email) &amp;&amp; ISBLANK(MobilePhone)</errorConditionFormula>
        <errorMessage>Please enter any of Phone, Mobile or Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Validate_length_of_phone</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName = &apos;SO_Contact&apos; || RecordType.DeveloperName = &apos;SO_JLR_Contact&apos; || RecordType.DeveloperName = &apos;SO_Retailer_Contact&apos; || RecordType.DeveloperName = &apos;JLR_Internal&apos;) &amp;&amp;
((NOT(ISBLANK(Phone)) &amp;&amp; NOT( 
OR(
AND(
LEN(Phone) &gt; 5,
REGEX(Phone, &quot;[0-9 ]+&quot;)
),
AND(
LEN(Phone) &gt; 6,
REGEX(Phone, &quot;\\+[0-9 ]+&quot;)
)
)
))||(NOT(ISBLANK(MobilePhone)) &amp;&amp; NOT( 
OR(
AND(
LEN(MobilePhone) &gt; 5,
REGEX(MobilePhone, &quot;[0-9 ]+&quot;)
),
AND(
LEN(MobilePhone) &gt; 6,
REGEX(MobilePhone, &quot;\\+[0-9 ]+&quot;)
)
)
)
)
)</errorConditionFormula>
        <errorMessage>Please enter a valid Phone/Mobile number</errorMessage>
    </validationRules>
</CustomObject>